syntax="proto3";

option go_package = "./genproto/incexpb";

service IncExpService {
    rpc RegisterIncome(RegisterIncomeRequest) returns (RegisterIncomeResponse);
    rpc RegisterExpense(RegisterExpenseRequest) returns (RegisterExpenseResponse);
    rpc GetListIncomeVSExpense(GetListIncomeVSExpenseRequest) returns (GetListIncomeVSExpenseResponse);
}

message RegisterIncomeRequest {
    string user_id = 1;  
    int64 amount = 2;
    string currency = 3;
    string category_id = 4;
    string date = 5;  
}

message RegisterIncomeResponse {
    string message = 1;
    string transaction_id = 2;
}

message RegisterExpenseRequest {
    string user_id = 1;  
    int64 amount = 2;
    string currency = 3;
    string category_id = 4;
    string date = 5; 
}

message RegisterExpenseResponse {
    string message = 1;
    string transaction_id = 2;
}

message IncomeVSExpense {
    string transaction_id = 1;
    string type = 2;
    int64 amount = 3;
    string currency = 4;
    string category = 5;
    string date = 6;
}

message GetListIncomeVSExpenseRequest {
    string user_id = 1; 
}

message GetListIncomeVSExpenseResponse {
    repeated IncomeVSExpense list = 1;
}
